--- a/packages/reactive_ble_mobile/pubspec.yaml
+++ b/packages/reactive_ble_mobile/pubspec.yaml
@@ -11,7 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   protobuf: ^2.0.0
-  reactive_ble_platform_interface: ^5.1.1
+  reactive_ble_platform_interface:
+    git:
+      url: https://github.com/Foxushka/flutter_reactive_ble.git
+      ref: android-companion-and-bonding
+      path: packages/reactive_ble_platform_interface/
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_test:
