--- a/packages/flutter_reactive_ble/pubspec.yaml
+++ b/packages/flutter_reactive_ble/pubspec.yaml
@@ -21,8 +21,16 @@ dependencies:
     sdk: flutter
   functional_data: ^1.0.0
   meta: ^1.3.0
-  reactive_ble_mobile: ^5.1.1
-  reactive_ble_platform_interface: ^5.1.1
+  reactive_ble_mobile:
+    git:
+      url: https://github.com/Foxushka/flutter_reactive_ble.git
+      ref: android-companion-and-bonding
+      path: packages/reactive_ble_mobile/
+  reactive_ble_platform_interface:
+    git:
+      url: https://github.com/Foxushka/flutter_reactive_ble.git
+      ref: android-companion-and-bonding
+      path: packages/reactive_ble_platform_interface/
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^1.0.4
